--- a/first.html
+++ b/first.html
@@ -6,33 +6,48 @@
 
     MY FIRST WEBPAGE
  </title>
+ <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
-This is my portfolio website page.
+This is my portfolio website page.<br> 
+My hobbies are to play basketball, tennis, taekwondo and do swimming etc.<hr>
  <h1>
-     JAPAN
+     I love Japan cause it has a very nice scenic beauty...
  </h1>
- <h2>
+ <h1>
      UAE
- </h2>
- <h3>
+ </h1>
+ <h1>
      EUROPE
- </h3>
- <h4>
+ </h1>
+ <h1>
      FRANCE
- </h4>
-<h5>
+ </h1>
+<h1>
     MALDIVES
-</h5>
-<h6>
+</h1>
+<h1>
     SINGAPORE
-</h6>
+</h1>
 
 <center>
     <a href="second.html">JAPAN</a>
 </center>
+<br><br>
 
+<div class="header">  
+    <h1>Ishita Bansal</h1>
+    <h1>Ishita Bansal</h1>
+   
+</div>
+
+<div class="footer">
+    <p>
+        My name is Ishita Bansal. I am 12 years old. I study in GDGPS, Dwarka. My hobbies are to play BasketBall, Tennis, do
+        swimming, taekwondo.
+    </p>
+</div>
 </body>
 </html>
